--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Shared\_ErrorLayout.cshtml" />
+    <Content Include="Views\Student\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
