added partial views

--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
@@ -197,6 +197,8 @@
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Shared\_ErrorLayout.cshtml" />
     <Content Include="Views\Student\Info.cshtml" />
+    <Content Include="Views\Shared\Navbar.cshtml" />
+    <Content Include="Views\Shared\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
