--- a/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
+++ b/aspnetmvc/session3/ViewsDemo/ViewsDemo/ViewsDemo.csproj
@@ -149,10 +149,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PictureController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -201,10 +203,10 @@
     <Content Include="Views\Shared\View.cshtml" />
     <Content Include="Views\Student\View.cshtml" />
     <Content Include="Views\Student\PartialView.cshtml" />
+    <Content Include="Views\Picture\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
