--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Sedc.MusicManager.WebApp.csproj
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Sedc.MusicManager.WebApp.csproj
@@ -207,6 +207,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Songs\Index.cshtml" />
+    <Content Include="Views\Songs\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
