fixed build errors

--- a/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Sedc.MusicManager.WebApp.csproj
+++ b/aspnetmvc/session5/Sedc.MusicManager/Sedc.MusicManager.WebApp/Sedc.MusicManager.WebApp.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CreateSongViewModel.cs" />
     <Compile Include="ViewModels\SongWithAlbumViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
