--- a/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.DataLayer/Sedc.MusicManager.DataLayer.csproj
+++ b/aspnetmvc/session6/Sedc.MusicManager/Sedc.MusicManager.DataLayer/Sedc.MusicManager.DataLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E7C07FAA-431D-44B2-950D-A49A7CDE9F28}</ProjectGuid>
+    <ProjectGuid>{4170AF25-A513-4F07-8DCD-1DD2312B3466}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sedc.MusicManager.DomainModels</RootNamespace>
-    <AssemblyName>Sedc.MusicManager.DomainModels</AssemblyName>
+    <RootNamespace>Sedc.MusicManager.DataLayer</RootNamespace>
+    <AssemblyName>Sedc.MusicManager.DataLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -41,12 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Album.cs" />
-    <Compile Include="Artist.cs" />
-    <Compile Include="ArtistType.cs" />
-    <Compile Include="Genre.cs" />
+    <Compile Include="MusicDb.cs" />
+    <Compile Include="SongsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Song.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sedc.MusicManager.DomainModels\Sedc.MusicManager.DomainModels.csproj">
+      <Project>{E7C07FAA-431D-44B2-950D-A49A7CDE9F28}</Project>
+      <Name>Sedc.MusicManager.DomainModels</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
