added artist create adn details view

--- a/aspnetmvc/session8/Sedc.MusicManagement.Web/Sedc.MusicManagement.Web.csproj
+++ b/aspnetmvc/session8/Sedc.MusicManagement.Web/Sedc.MusicManagement.Web.csproj
@@ -201,6 +201,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Artists\Index.cshtml" />
+    <Content Include="Views\Artists\Create.cshtml" />
+    <Content Include="Views\Artists\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
